envoy/appB/proxy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9904

static_resources:
  listeners:
  - name: appB_proxy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9905
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: proxy_http
          internal_address_config:
            unix_sockets: true
          route_config:
            name: appB_local_route
            virtual_hosts:
            - name: appB_local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/calculate/add"
                route:
                  cluster: appA_cluster
                  timeout: 30s
                  prefix_rewrite: "/calculate/add"
                request_headers_to_add:
                  - header:
                      key: "Content-Type"
                      value: "application/json"
                    append: false
              - match:
                  prefix: "/"
                route:
                  cluster: appB_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              log_format:
                json_format:
                  timestamp: "%START_TIME%"
                  upstream_service: "%UPSTREAM_CLUSTER%"
                  request_method: "%REQ(:METHOD)%"
                  request_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  response_code: "%RESPONSE_CODE%"
                  response_time: "%DURATION%"
                  bytes_received: "%BYTES_RECEIVED%"
                  bytes_sent: "%BYTES_SENT%"
                  protocol: "%PROTOCOL%"
                  response_flags: "%RESPONSE_FLAGS%"
                  route_name: "%ROUTE_NAME%"

  clusters:
  - name: appB_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: appB_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: appb
                port_value: 5001

  - name: appA_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
      - timeout: 1s
        interval: 5s
        unhealthy_threshold: 2
        healthy_threshold: 1
        http_health_check:
          path: "/health"
    load_assignment:
      cluster_name: appA_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: appa-proxy
                port_value: 9902
